<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.easterbrook.flood_it.activities.MainMenuActivity">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="236dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:cropToPadding="false"
        android:src="@drawable/flood_it_headerhdpi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/header_descrption"/>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="230dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/about_this_app_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_image"
        app:layout_constraintVertical_bias="0.498">

        <Button
            android:id="@+id/play_classic_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playClassicButtonClick"
            android:text="@string/menu_play_classic" />

        <Button
            android:id="@+id/play_custom_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playCustomButtonClick"
            android:text="@string/menu_play_custom" />

        <Button
            android:id="@+id/leaderboard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="leaderboardButtonClick"
            android:text="@string/menu_leaderboard" />

        <Button
            android:id="@+id/how_to_play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="howToPlayButtonClick"
            android:text="@string/menu_how_to_play" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/about_this_app_button"
        android:layout_width="32dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:onClick="aboutTheAppButtonClick"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_info_outline_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/about_the_app"/>

</android.support.constraint.ConstraintLayout>
